# backcomm

./: README.md  main.py  pyproject.toml  setup.py
backcomm/: __init__.py  composed.py  fixed.py  segmented.py
src/backcomm/: __init__.py  segmented.py
test/: test_composed.py  test_fixed.py
tests/: composed-tests.py  segmented-tests.py
