[tool.poetry]
name = "backcomm"
version = "0.1.0"
description = "This package provides commission utility classes to be used with backtrader"
authors = ["Pablo Perez <dalotodo69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
backtrader = "^1.9.76"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
